<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/paymentsFragment"
        android:icon="@drawable/icon_payment"
        android:title="@string/payments"
        android:enabled="true"
        android:contentDescription="@string/payments"
        />

    <item
        android:id="@+id/detectionFragment"
        android:icon="@drawable/icon_camera"
        android:title="@string/senddata"
        android:enabled="true"
        android:contentDescription="@string/senddata"
        />
    <item
        android:id="@+id/myFarmFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/myfarm"
        android:enabled="true"
        android:contentDescription="@string/myfarm"
        />

    <item
        android:id="@+id/calenderFragment"
        android:icon="@drawable/icon_calender"
        android:title="@string/calender"
        android:enabled="true"
        android:contentDescription="@string/calender"
        />


    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/icon_alert"
        android:title="@string/alerts"
        android:enabled="true"
        android:contentDescription="@string/alerts"
        />

</menu>